# COpengl

./: .gitignore  CMakeLists.txt  build.sh
include/: app.h
include/core/: camera.h  core.h  input.h  math_utils.h  model.h  ortho_camera.h  renderer.h  vector.h  window.h
include/core/gfx/: framebuffer.h  shader.h  texture.h
shaders/: batch_rendering.frag  batch_rendering.vert  default.frag  default.vert  model.frag  model.vert
src/: app.c  main.c
src/core/: camera.c  input.c  math_utils.c  model.c  ortho_camera.c  renderer.c  vector.c  window.c
src/core/gfx/: framebuffer.c  shader.c  texture.c
